# bevis-gpt-slack-bot

./: README.md  main.py  pyproject.toml
bot/: app.py  config.py
